Check if at least one micropost was posted in advance

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -12,7 +12,8 @@
 
 <p>
   <strong>Latest micropost:</strong>
-  <%= @user.microposts.first.content %>
+  <% latest_micropost = @user.microposts.first %>
+  <%= latest_micropost.content if latest_micropost %>
 </p>
 
 <%= link_to 'Edit', edit_user_path(@user) %> |
